--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,7 @@ jobs:
   release:
     if: github.actor == 'krukow'
     runs-on: ubuntu-latest
+    environment: release
     timeout-minutes: 30
     env:
       GH_TOKEN: ${{ secrets.RELEASE_TOKEN || github.token }}
